--- a/static/ui/css/member_directory.css
+++ b/static/ui/css/member_directory.css
@@ -1,30 +1,42 @@
 /*
-Project: Farnsworth
+  Project: Farnsworth
 
 Author: Karandeep Singh Nagra
 */
 
 .table_container {
-	float: middle;
-	border: 1px solid #7e7e7e;
-	position: relative;
-	margin: 30px 10px;
-	font-size: 15pt;
-	box-shadow: 0px 0px 5px rgba(0,0,0,0.3);
-	overflow: hidden;
+    float: middle;
+    border: 1px solid #7e7e7e;
+    position: relative;
+    margin: 30px 10px;
+    font-size: 15pt;
+    box-shadow: 0px 0px 5px rgba(0,0,0,0.3);
+    overflow: hidden;
+}
+
+#residents_table {
+    margin: 0px;
+}
+
+#boarders_table { 
+    margin: 0px;
+}
+
+#alumni_table {
+    margin: 0px;
 }
 
 .table_title {
-	background: #5e5e5e;
-	color: #fafafa;
-	padding-left: 10px;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	font-size: 20pt;
+    background: #5e5e5e;
+    color: #fafafa;
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-size: 20pt;
 }
 
 .field_wrapper {
-	padding-top: 10px;
-	padding-bottom: 10px;
-	text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center;
 }
